// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ClaimPaper with ClaimBody 1`] = `
<div
  className="MuiPaper-root-177 MuiPaper-elevation1-180 MuiPaper-rounded-178 Component-root-175 Component-root-176 Component-root-174"
>
  <h5
    className="MuiTypography-root-206 MuiTypography-h5-215 MuiTypography-colorTextPrimary-231 MuiTypography-alignCenter-222 WithStyles(ForwardRef(Typography))-root-204 WithStyles(ForwardRef(Typography))-root-205"
  >
    This is a claim body
  </h5>
</div>
`;

exports[`Storyshots Claims Evidence 1`] = `
<div
  className="MuiPaper-root-414 MuiPaper-elevation0-416 MuiPaper-rounded-415 MuiExpansionPanel-root-410 MuiExpansionPanel-rounded-411 Component-root-409"
>
  <div
    aria-disabled={false}
    aria-expanded={false}
    className="MuiButtonBase-root-448 MuiExpansionPanelSummary-root-442 Component-root-441"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiExpansionPanelSummary-content-446"
    >
      <div
        className="MuiBox-root-451 MuiBox-root-452"
        onClick={[Function]}
      >
        <button
          aria-haspopup="true"
          className="MuiButtonBase-root-448 MuiButton-root-457 MuiButton-text-459 WithStyles(ForwardRef(Button))-root-455 WithStyles(ForwardRef(Button))-root-456 Component-root-453 Component-root-454"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-458"
          >
            66
            %
          </span>
        </button>
      </div>
      <h6
        className="MuiTypography-root-479 MuiTypography-h6-489 WithStyles(ForwardRef(Typography))-root-477 WithStyles(ForwardRef(Typography))-root-478"
      >
        <a
          className="MuiTypography-root-479 MuiTypography-colorInherit-501 MuiLink-root-509 MuiLink-underlineHover-511"
          href="/somesay/this-is-another-claim"
          onClick={[Function]}
        >
          This is a claim that stretches the limits of this system. It has precisely 255 characters, the maximum number of characters that a claim can have and still be valid. Anything longer than this will be rejected by the system because it is too long. Goodbye.
        </a>
      </h6>
      <div
        className="MuiBox-root-451 MuiBox-root-514"
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-448 MuiButton-root-457 MuiButton-text-459 WithStyles(ForwardRef(Button))-root-455 WithStyles(ForwardRef(Button))-root-515"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-458"
          >
            I agree
          </span>
        </button>
        <button
          className="MuiButtonBase-root-448 MuiButton-root-457 MuiButton-text-459 WithStyles(ForwardRef(Button))-root-455 WithStyles(ForwardRef(Button))-root-516"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-458"
          >
            I'm not sure
          </span>
        </button>
        <button
          className="MuiButtonBase-root-448 MuiButton-root-457 MuiButton-text-459 WithStyles(ForwardRef(Button))-root-455 WithStyles(ForwardRef(Button))-root-517"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-458"
          >
            I disagree
          </span>
        </button>
      </div>
    </div>
    <div
      aria-disabled={false}
      aria-hidden="true"
      className="MuiButtonBase-root-448 MuiIconButton-root-518 MuiIconButton-edgeEnd-520 MuiExpansionPanelSummary-expandIcon-447"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={-1}
    >
      <span
        className="MuiIconButton-label-526"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-527"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    className="MuiCollapse-container-536 MuiCollapse-hidden-538"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-539"
    >
      <div
        className="MuiCollapse-wrapperInner-540"
      >
        <div
          role="region"
        >
          <div
            className="MuiExpansionPanelDetails-root-541"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Claims SupportList 1`] = `
<div
  className="MuiBox-root-341 MuiBox-root-342"
>
  <div
    className="MuiBox-root-341 MuiBox-root-343"
  >
    <h5
      className="MuiTypography-root-346 MuiTypography-h5-355 WithStyles(ForwardRef(Typography))-root-344 WithStyles(ForwardRef(Typography))-root-345"
    >
      because
    </h5>
    <div
      className="MuiBox-root-341 MuiBox-root-376"
    >
      <form
        onReset={[Function]}
        onSubmit={[Function]}
      >
        <div
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-owns="react-autowhatever-1"
          role="combobox"
          style={Object {}}
        >
          <div
            className="MuiInputBase-root-391 MuiInput-root-379 MuiInput-underline-383 MuiInputBase-fullWidth-400 MuiInput-fullWidth-386"
            field="body"
            onClick={[Function]}
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls="react-autowhatever-1"
              autoComplete="off"
              className="MuiInputBase-input-401 MuiInput-input-387"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="why?"
              style={Object {}}
              type="text"
              value=""
            />
          </div>
          <div
            id="react-autowhatever-1"
            role="listbox"
            style={Object {}}
          >
            
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots Claims default 1`] = `
<div
  className="MuiGrid-root-238 MuiGrid-container-239 MuiGrid-spacing-xs-1-261 WithStyles(ForwardRef(Grid))-root-236 WithStyles(ForwardRef(Grid))-root-237"
/>
`;

exports[`Storyshots Header default 1`] = `
<header>
  <header
    className="MuiPaper-root-43 MuiPaper-elevation4-49 MuiAppBar-root-34 MuiAppBar-positionStatic-38 MuiAppBar-colorDefault-40"
  >
    <div
      className="MuiToolbar-root-72 MuiToolbar-regular-74 MuiToolbar-gutters-73 WithStyles(ForwardRef(Toolbar))-root-70 WithStyles(ForwardRef(Toolbar))-root-71"
    >
      <button
        aria-haspopup="true"
        className="MuiButtonBase-root-95 MuiButton-root-78 MuiButton-text-80 WithStyles(ForwardRef(Button))-root-76 WithStyles(ForwardRef(Button))-root-77"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-79"
        >
          <img
            alt="logo"
            className="Component-logo-98"
            src="logo.svg"
          />
        </span>
        <span
          className="MuiTouchRipple-root-164"
        />
      </button>
      <h6
        className="MuiTypography-root-105 MuiTypography-h6-115 WithStyles(ForwardRef(Typography))-root-103 WithStyles(ForwardRef(Typography))-root-104 Component-ohhey-33"
      >
        oh hey!
      </h6>
      <form
        onReset={[Function]}
        onSubmit={[Function]}
      >
        <div
          className="MuiInputBase-root-147 MuiInput-root-135 MuiInput-underline-139"
          onClick={[Function]}
        >
          <input
            className="MuiInputBase-input-157 MuiInput-input-143"
            name="username"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="MuiInputBase-root-147 MuiInput-root-135 MuiInput-underline-139"
          onClick={[Function]}
        >
          <input
            className="MuiInputBase-input-157 MuiInput-input-143"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="password"
            value=""
          />
        </div>
        <button
          className="MuiButtonBase-root-95 MuiButton-root-78 MuiButton-text-80 WithStyles(ForwardRef(Button))-root-76 WithStyles(ForwardRef(Button))-root-163"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="submit"
        >
          <span
            className="MuiButton-label-79"
          >
            log in
          </span>
          <span
            className="MuiTouchRipple-root-164"
          />
        </button>
      </form>
    </div>
  </header>
</header>
`;

exports[`Storyshots UI components ClaimPaper 1`] = `
<div
  className="MuiPaper-root-6 MuiPaper-elevation1-9 MuiPaper-rounded-7 Component-root-4 Component-root-5 Component-root-3"
>
  This is some paper on which to write a claim.
</div>
`;

exports[`Storyshots UI components Spinner 1`] = `
<div
  className="sk-fade-in sk-spinner Spinner-root-1 Spinner-root-2 sk-chasing-dots"
>
  <div />
  <div />
</div>
`;

exports[`Storyshots UserClaim default 1`] = `
<div
  className="MuiPaper-root-555 MuiPaper-elevation1-558 MuiPaper-rounded-556 Component-root-553 Component-root-554 Component-root-552"
>
  <div
    className="MuiToolbar-root-584 MuiToolbar-regular-586 MuiToolbar-gutters-585 WithStyles(ForwardRef(Toolbar))-root-582 WithStyles(ForwardRef(Toolbar))-root-583"
  >
    <span
      className="MuiTypography-root-590 MuiTypography-caption-593 MuiTypography-alignCenter-606 WithStyles(ForwardRef(Typography))-root-588 WithStyles(ForwardRef(Typography))-root-589"
    >
      100
    </span>
    <button
      className="MuiButtonBase-root-640 MuiButton-root-623 MuiButton-text-625 WithStyles(ForwardRef(Button))-root-621 WithStyles(ForwardRef(Button))-root-622 Styled(WithStyles(ForwardRef(Button)))-root-620"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-624"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-643 MuiSvgIcon-fontSizeInherit-649"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zM6 9h12v2H6V9zm8 5H6v-2h8v2zm4-6H6V6h12v2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
    </button>
    <button
      className="MuiButtonBase-root-640 MuiButton-root-623 MuiButton-text-625 WithStyles(ForwardRef(Button))-root-621 WithStyles(ForwardRef(Button))-root-652 Styled(WithStyles(ForwardRef(Button)))-root-620"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-624"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-643 MuiSvgIcon-fontSizeInherit-649"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M11 7h2v2h-2zM11 11h2v6h-2z"
          />
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
          />
        </svg>
      </span>
    </button>
  </div>
  <h6
    className="MuiTypography-root-590 MuiTypography-subtitle1-601 MuiTypography-alignCenter-606 WithStyles(ForwardRef(Typography))-root-588 WithStyles(ForwardRef(Typography))-root-667"
  >
    @
    toby
  </h6>
  <h5
    className="MuiTypography-root-590 MuiTypography-h5-599 MuiTypography-colorTextPrimary-615 MuiTypography-alignCenter-606 WithStyles(ForwardRef(Typography))-root-588 WithStyles(ForwardRef(Typography))-root-668"
  >
    <a
      className="MuiTypography-root-590 MuiTypography-colorInherit-612 MuiLink-root-669 MuiLink-underlineHover-671"
      href="/somesay/this-is-a-claim"
      onClick={[Function]}
    >
      This is a claim
    </a>
  </h5>
  <div />
</div>
`;
